# betabot

./: ..bashrc.swp  .gitmodules  CMakeLists.txt  README.md  package.xml
betabot_closeto/: CMakeLists.txt  package.xml
betabot_description/: CMakeLists.txt  package.xml
betabot_description/launch/: betabot_display.launch  display.launch
betabot_description/meshes/: betabot_base.dae  betabot_caster.dae  betabot_extension.dae  betabot_wheel.dae  raspicam.dae  rplidar.dae  rplidar_a1.dae  rplidar_a2.dae
betabot_description/meshes/blender files/: Arducam UC_261.stp  betabot_base.blend  betabot_base.blend1  betabot_base2.dae  betabot_caster.blend  betabot_extension.blend  betabot_extension.blend1  betabot_wheel.blend  betabot_wheel.blend1  raspicam.blend  raspicam.blend1  rplidar.blend  rplidar.blend1  rplidar_a2.blend  rplidar_a2.blend1
betabot_description/meshes/orginal Solidworks STLs/: base_link.STL  caster_link.STL  wheel_link.STL
betabot_description/rviz/: betabot.rviz  betabot_EKF.rviz
betabot_description/urdf/: betabot.gazebo  betabot.gazebo.xacro  betabot.urdf.xacro  betabot_d435_properties.urdf.xacro  cam.urdf  common_properties.urdf.xacro  macros.xacro
betabot_gazebo/: CMakeLists.txt  package.xml
betabot_msgs/: CMakeLists.txt  package.xml
betabot_nav_amcl/: README.md
betabot_navigation/: CMakeLists.txt  maps.yaml  package.xml
betabot_obstacles_avoider/: README.md
betabot_teleop/: CMakeLists.txt  package.xml  setup.py
betabot_teleop/launch/: betabot_teleop_key.launch
betabot_teleop/nodes/: betabot_teleop_key
launch/: display.launch  (+1 more)
(+29 files in other folders)
